tests/positive/pr1110b_list_basics.safe
-- Test: pr1110b_list_basics
-- Description: Built-in `list of T` reuses growable-array value semantics with
--   `append`, `pop_last`, indexing, slicing, and iteration.
-- Clause: SAFE@468cf72:docs/PR11.x-series-proposed.md#pr1110b-built-in-list-of-t
-- Expected: ACCEPT

package pr1110b_list_basics

   function starts_with_one (values : list of integer) returns boolean
      for item of values
         return item == 1;

      return false;

   function seeded_items returns list of integer
      var items : list of integer = [1, 2, 3];

      append (items, 4);
      return items;

   function trimmed_total returns integer
      var items : list of integer = seeded_items;
      last : constant optional integer = pop_last (items);
      if last.present and then last.value == 4 and then starts_with_one (items) and then items.length == 3 and then items (2 to 3).length == 2 and then items (3) == 3
         return items.length;
      else
         return 0;
