tests/negative/neg_pr1110a_optional_mutated.safe
-- Test: neg_pr1110a_optional_mutated
-- Description: Reassigning an optional invalidates any prior `.present` fact.
-- Clause: SAFE@468cf72:docs/PR11.x-series-proposed.md#pr1110a-built-in-optionalt
-- Expected: REJECT discriminant_check_not_established

package neg_pr1110a_optional_mutated

   function parse (input : integer) returns optional integer

      if input > 0
         return some (input);
      else
         return none;

   function unsafe_after_mutation (first : integer;
                                   second : integer) returns integer
      value : optional integer = parse (first);

      if value.present
         value = parse (second);
         return value.value;
      else
         return 0;
